fix: Replace logical property for overflow on <body>
Also remove old additions for IE CSS grid

--- a/assets-src/styles/sass/30-base/_body.scss
+++ b/assets-src/styles/sass/30-base/_body.scss
@@ -3,7 +3,7 @@
 
     1. Prevent font size inflation with change of orientation
     2. Needed for sticky footer
-    3. Because autoprefixer does not cover IE grid
+    3. Equivalent `overflow-inline` logical property not currently well supported
 \*------------------------------------*/
 
 html {
@@ -21,13 +21,10 @@ body {
 	background-color: $off-white;
 	color: $off-black;
 	display: grid; /* 2 */
-	display: -ms-grid; /* 3 */
 	grid-template-columns: 100%;
-	-ms-grid-columns: 100%; /* 3 */
 	grid-template-rows: 1fr auto; /* 2 */
-	-ms-grid-rows: 1fr auto; /* 3 */
 	min-block-size: 100%;
-	overflow-inline: hidden;
+	overflow-x: hidden; /* 3 */
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 }
